--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 								</div>
 							</div>
 						</div>
-						<h1 id="text16">Let&#39;s tell your story</h1>
+						<h1 id="text16">Let&#39;s te your story</h1>
 						<ul id="buttons11" class="style3 buttons">
 							<li>
 								<a href="#" class="button n01">HOME</a>
